--- a/style/style.css
+++ b/style/style.css
@@ -42,6 +42,7 @@
   line-height: 22px;
   color: #FFFFFF;
   cursor: pointer;
+  transition: background 0.3s;
 }
 .main__button:hover {
   background: #EB443F;
@@ -65,6 +66,7 @@
   padding: 32px;
   border-radius: 19px;
   cursor: pointer;
+  transition: border 0.3s;
 }
 .card__name {
   font-style: normal;
