--- a/style/style.scss
+++ b/style/style.scss
@@ -7,12 +7,24 @@
     font-family: 'Montserrat', sans-serif;
 }
 
+.container {
+    width: 100%;
+    height: 100%;
+}
 .main {
-    height: 1024px;
+    display: flex;
+    justify-content: center;
     background-image: url(../image/main-bg.jpg);
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
     padding-top: 217px;
     padding-left: 120px;
+    height: 1024px;
 
+    &-box {
+        width: 1440px;
+    }
     &__title {
         width: 768px;
         font-style: normal;
@@ -52,6 +64,8 @@
     
 .games {
     background-image: url(../image/background.jpg);
+    background-position: center;
+
     padding: 128px 120px;
     display: flex;
     flex-wrap: wrap;
