--- a/style/style.css
+++ b/style/style.css
@@ -18,15 +18,15 @@
   background-position: center;
   background-repeat: no-repeat;
   background-size: cover;
-  padding-top: 217px;
-  padding-left: 120px;
+  padding: 217px 120px 0;
   height: 1024px;
 }
 .main-box {
-  width: 1440px;
+  width: 100%;
+  display: flex;
+  flex-direction: column;
 }
 .main__title {
-  width: 768px;
   font-style: normal;
   font-weight: 700;
   font-size: 64px;
@@ -91,13 +91,48 @@
 }
 .card--game-1 {
   background-image: url(../image/game-1.jpg);
+  background-position: center;
 }
 .card--game-2 {
   background-image: url(../image/game-2.jpg);
+  background-position: center;
 }
 .card--game-3 {
   background-image: url(../image/game-3.jpg);
+  background-position: center;
 }
 .card:hover {
   border: 3px solid #44D2FF;
+}
+
+@media (max-width: 767px) {
+  .main {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+  .main-box {
+    align-items: center;
+  }
+  .main__title {
+    text-align: center;
+    font-size: 32px;
+    line-height: 39px;
+    width: -moz-fit-content;
+    width: fit-content;
+  }
+  .main__description {
+    text-align: center;
+    font-size: 14px;
+    line-height: 22px;
+    width: 288px;
+  }
+  .games {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+}
+@media (min-width: 1440px) {
+  .main-box {
+    width: 1200px;
+  }
 }/*# sourceMappingURL=style.css.map */
