--- a/style/style.scss
+++ b/style/style.scss
@@ -18,15 +18,15 @@
     background-position: center;
     background-repeat: no-repeat;
     background-size: cover;
-    padding-top: 217px;
-    padding-left: 120px;
+    padding: 217px 120px 0;
     height: 1024px;
 
     &-box {
-        width: 1440px;
+        width: 100%;
+        display: flex;
+        flex-direction: column;
     }
     &__title {
-        width: 768px;
         font-style: normal;
         font-weight: 700;
         font-size: 64px;
@@ -90,15 +90,20 @@
     }
     &--game-1 {
         background-image: url(../image/game-1.jpg);
+        background-position: center;
     }
     &--game-2 {
         background-image: url(../image/game-2.jpg);
+        background-position: center;
     }
     &--game-3 {
         background-image: url(../image/game-3.jpg);
+        background-position: center;
     }
     transition: border .3s;
     &:hover {
         border: 3px solid #44D2FF;
     }
 }
+
+@import 'mobile'
