--- a/style/style.css
+++ b/style/style.css
@@ -6,6 +6,10 @@
   font-family: "Montserrat", sans-serif;
 }
 
+a {
+  text-decoration: none;
+}
+
 .container {
   width: 100%;
   height: 100%;
@@ -46,6 +50,9 @@
 .main__button {
   width: 234.06px;
   height: 48.6px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
   background: #9C0332;
   border: none;
   border-radius: 30px;
@@ -105,6 +112,51 @@
   border: 3px solid #44D2FF;
 }
 
+.seasons {
+  background: #000915;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center;
+  padding: 282px 0;
+  gap: 135px;
+}
+.seasons__left-box {
+  width: 584px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.seasons__title {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 59px;
+  color: #FFFFFF;
+}
+.seasons__description {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 32px;
+  color: #FFFFFF;
+}
+.seasons__button {
+  width: 234.06px;
+  height: 48.6px;
+  background: #9C0332;
+  border: none;
+  border-radius: 30px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #FFFFFF;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+.seasons__button:hover {
+  background: #EB443F;
+}
+
 @media (max-width: 767px) {
   .main {
     padding-left: 16px;
@@ -130,9 +182,42 @@
     padding-left: 16px;
     padding-right: 16px;
   }
+  .seasons {
+    padding-top: 51px;
+    padding-bottom: 85px;
+  }
+  .seasons__title {
+    font-size: 32px;
+    line-height: 39px;
+  }
+  .seasons__description {
+    font-size: 14px;
+    line-height: 22px;
+  }
 }
 @media (min-width: 1440px) {
   .main-box {
     width: 1200px;
+  }
+}
+@media (max-width: 1204px) {
+  .seasons {
+    padding-left: 16px;
+    padding-right: 16px;
+  }
+  .seasons__left-box {
+    text-align: center;
+    align-items: center;
+  }
+}
+@media (max-width: 530px) {
+  .seasons__image {
+    width: 344px;
+    height: 236px;
+  }
+}
+@media (max-width: 334px) {
+  .seasons__image {
+    width: 320px;
   }
 }/*# sourceMappingURL=style.css.map */
