--- a/style/style.css
+++ b/style/style.css
@@ -157,6 +157,51 @@ a {
   background: #EB443F;
 }
 
+.remember {
+  background: #000915;
+  display: flex;
+  flex-wrap: wrap-reverse;
+  justify-content: center;
+  align-items: center;
+  padding: 282px 0;
+  gap: 135px;
+}
+.remember__right-box {
+  width: 584px;
+  display: flex;
+  flex-direction: column;
+  gap: 32px;
+}
+.remember__title {
+  font-weight: 700;
+  font-size: 48px;
+  line-height: 59px;
+  color: #FFFFFF;
+}
+.remember__description {
+  font-weight: 300;
+  font-size: 18px;
+  line-height: 32px;
+  color: #FFFFFF;
+}
+.remember__button {
+  width: 234.06px;
+  height: 48.6px;
+  background: #9C0332;
+  border: none;
+  border-radius: 30px;
+  font-style: normal;
+  font-weight: 400;
+  font-size: 18px;
+  line-height: 22px;
+  color: #FFFFFF;
+  cursor: pointer;
+  transition: background 0.3s;
+}
+.remember__button:hover {
+  background: #EB443F;
+}
+
 @media (max-width: 767px) {
   .main {
     padding-left: 16px;
@@ -182,15 +227,19 @@ a {
     padding-left: 16px;
     padding-right: 16px;
   }
-  .seasons {
-    padding-top: 51px;
-    padding-bottom: 85px;
-  }
   .seasons__title {
     font-size: 32px;
     line-height: 39px;
   }
   .seasons__description {
+    font-size: 14px;
+    line-height: 22px;
+  }
+  .remember__title {
+    font-size: 32px;
+    line-height: 39px;
+  }
+  .remember__description {
     font-size: 14px;
     line-height: 22px;
   }
@@ -202,10 +251,16 @@ a {
 }
 @media (max-width: 1204px) {
   .seasons {
-    padding-left: 16px;
-    padding-right: 16px;
+    padding: 51px 16px 85px;
   }
   .seasons__left-box {
+    text-align: center;
+    align-items: center;
+  }
+  .remember {
+    padding: 51px 16px 85px;
+  }
+  .remember__right-box {
     text-align: center;
     align-items: center;
   }
@@ -215,9 +270,16 @@ a {
     width: 344px;
     height: 236px;
   }
+  .remember__image {
+    width: 344px;
+    height: 236px;
+  }
 }
 @media (max-width: 334px) {
   .seasons__image {
+    width: 320px;
+  }
+  .remember__image {
     width: 320px;
   }
 }/*# sourceMappingURL=style.css.map */
